fix: CSS content overflow-auto in chi-tiet-bai

--- a/public/modules/bai/css/chi-tiet.css
+++ b/public/modules/bai/css/chi-tiet.css
@@ -41,6 +41,11 @@
   }
 }
 
+#content-bai {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
 #content-bai img {
   max-width: 100%;
   height: auto;
